--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   },
   "homepage": "",
   "devDependencies": {
-    "cypress": "^9.7.0"
+    "@faker-js/faker": "^8.3.1",
+    "cypress": "^13.6.3"
   },
   "dependencies": {
     "faker": "^5.5.3"
